--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,8 +5,8 @@
         <title>
             Project Title
         </title>
-        <link rel="icon" href="" media="(prefers-color-scheme: light)" />
-        <link rel="icon" href="" media="(prefers-color-scheme: dark)" />
+        <!-- <link rel="icon" href="" media="(prefers-color-scheme: light)" /> -->
+        <!-- <link rel="icon" href="" media="(prefers-color-scheme: dark)" /> -->
     </head>
     <body>
         <div id="root"></div>
